# zookeeper-election

./: CMakeLists.txt  README.md
include/: ss_config_service.h
lib/: libzookeeper_mt.la  libzookeeper_mt.so.2.0.0  zookeeper_d.lib
src/: ss_config_service.c  test.cpp
zkdll/test/: test.vcproj
zkdll/zklib/: zklib.vcproj
