CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(SSCS)
INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/include/
  ${CMAKE_SOURCE_DIR}/include/zookeeper
)
LINK_DIRECTORIES (
  ${CMAKE_SOURCE_DIR}/lib
)
FILE(GLOB SS_CS_SRC
  ${CMAKE_SOURCE_DIR}/src/ss_config_service.c
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

ADD_LIBRARY(SSCS SHARED ${SS_CS_SRC})

TARGET_LINK_LIBRARIES(SSCS
  zookeeper_mt
  libcrypto.so
)



PROJECT(test_lib)
INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/include/
)
LINK_DIRECTORIES (
  ${CMAKE_SOURCE_DIR}/build
)
FILE(GLOB TEST_SRC
  ${CMAKE_SOURCE_DIR}/src/test.cpp
)
ADD_EXECUTABLE(test_lib ${TEST_SRC})
TARGET_LINK_LIBRARIES(test_lib
  SSCS
)










